force-app/main/default/objects/Case/fields/LDRF_submitted__c.field-meta.xml
<CustomField>
    <fullName>LDRF_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LDRF submitted</label>
    <type>Checkbox</type>
</CustomField>