force-app/main/default/objects/Case/fields/LDRF_Submitted_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>LDRF_Submitted_Completed_Date__c</fullName>
    <label>LDRF Submitted Completed Date</label>
    <type>Date</type>
</CustomField>