force-app/main/default/objects/Case/fields/LDRF_submitted_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>LDRF_submitted_Due_Date__c</fullName>
    <label>LDRF submitted Due Date</label>
    <type>Date</type>
</CustomField>