force-app/main/default/objects/Case/fields/LDRF_submitted_Owner__c.field-meta.xml
<CustomField>
    <fullName>LDRF_submitted_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LDRF submitted Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases8</relationshipName>
    <type>Lookup</type>
</CustomField>