force-app/main/default/objects/Case/fields/Lighting_Design_Completed__c.field-meta.xml
<CustomField>
    <fullName>Lighting_Design_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lighting Design Completed</label>
    <type>Checkbox</type>
</CustomField>