force-app/main/default/objects/Case/fields/Lighting_Design_completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Lighting_Design_completed_Date__c</fullName>
    <label>Lighting Design completed Date</label>
    <type>Date</type>
</CustomField>