force-app/main/default/objects/Case/fields/Lighting_Design_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Lighting_Design_Due_Date__c</fullName>
    <label>Lighting Design Due Date</label>
    <type>Date</type>
</CustomField>