force-app/main/default/objects/Case/fields/Lighting_Design_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lighting_Design_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lighting Design Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases9</relationshipName>
    <type>Lookup</type>
</CustomField>