force-app/main/default/objects/Case/fields/Line_Voltage__c.field-meta.xml
<CustomField>
    <fullName>Line_Voltage__c</fullName>
    <label>Input AC Voltage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>208</fullName>
            </value>
            <value>
                <fullName>220</fullName>
            </value>
            <value>
                <fullName>230</fullName>
            </value>
            <value>
                <fullName>240</fullName>
            </value>
            <value>
                <fullName>277</fullName>
            </value>
            <value>
                <fullName>347</fullName>
            </value>
            <value>
                <fullName>380</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>415</fullName>
            </value>
            <value>
                <fullName>480</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>