force-app/main/default/objects/Case/fields/Link_to_Lighting_Design_Files__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Lighting_Design_Files__c</fullName>
    <label>Link to Lighting Design Files</label>
    <type>TextArea</type>
</CustomField>