force-app/main/default/objects/Case/fields/Link_to_Lighting_Rebate_files__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Lighting_Rebate_files__c</fullName>
    <label>Link to Lighting Rebate files</label>
    <length>255</length>
    <type>Text</type>
</CustomField>