force-app/main/default/objects/Case/fields/New_Day__c.field-meta.xml
<CustomField>
    <fullName>New_Day__c</fullName>
    <label>New Day</label>
    <type>DateTime</type>
</CustomField>