force-app/main/default/objects/Case/fields/New_Day_RARF__c.field-meta.xml
<CustomField>
    <fullName>New_Day_RARF__c</fullName>
    <label>New Day RARF</label>
    <type>DateTime</type>
</CustomField>