force-app/main/default/objects/Case/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <label>Next Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>