force-app/main/default/objects/Case/fields/No_of_Room_Types__c.field-meta.xml
<CustomField>
    <fullName>No_of_Room_Types__c</fullName>
    <label>Number of Room Types</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>