force-app/main/default/objects/Case/fields/Number_of_LDRF_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_LDRF_Rooms__c</fullName>
    <label>Number of LDRF Rooms</label>
    <summaryForeignKey>LDRF_Room__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>