force-app/main/default/objects/Case/fields/On_site_inspection_needed__c.field-meta.xml
<CustomField>
    <fullName>On_site_inspection_needed__c</fullName>
    <label>On-site inspection needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>