force-app/main/default/objects/Case/fields/Opp_Prob_when_LDRF_submitted__c.field-meta.xml
<CustomField>
    <fullName>Opp_Prob_when_LDRF_submitted__c</fullName>
    <label>Opp Prob % when LDRF submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>