force-app/main/default/objects/Case/fields/Opportunity_on_Awaiting_PO_status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_on_Awaiting_PO_status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity on Awaiting PO status</label>
    <type>Checkbox</type>
</CustomField>