force-app/main/default/objects/Case/fields/Opportunity_Owner2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner2__c</fullName>
    <formula>Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Owner.LastName</formula>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>