force-app/main/default/objects/Case/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <formula>TEXT(Opportunity__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Status</label>
    <type>Text</type>
</CustomField>