force-app/main/default/objects/Case/fields/Order_Line_Number_for_Commissioning_SKU__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Number_for_Commissioning_SKU__c</fullName>
    <label>ERP Order Line # for Commissioning SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>