force-app/main/default/objects/Case/fields/Partner_Integrator__c.field-meta.xml
<CustomField>
    <fullName>Partner_Integrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner/Integrator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Reseller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LDRF Cases</relationshipLabel>
    <relationshipName>LDRFCases</relationshipName>
    <type>Lookup</type>
</CustomField>