force-app/main/default/objects/Case/fields/Payment_received__c.field-meta.xml
<CustomField>
    <fullName>Payment_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment received?</label>
    <type>Checkbox</type>
</CustomField>