force-app/main/default/objects/Case/fields/Photo_S__c.field-meta.xml
<CustomField>
    <fullName>Photo_S__c</fullName>
    <label>Photo(s)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>