force-app/main/default/objects/Case/fields/Photometric_Design__c.field-meta.xml
<CustomField>
    <fullName>Photometric_Design__c</fullName>
    <label>Photometric Design</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>