force-app/main/default/objects/Case/fields/Pre_approval_amount__c.field-meta.xml
<CustomField>
    <fullName>Pre_approval_amount__c</fullName>
    <label>Pre-approval amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>