force-app/main/default/objects/Case/fields/Pre_approval_obtain_date__c.field-meta.xml
<CustomField>
    <fullName>Pre_approval_obtain_date__c</fullName>
    <label>Pre-approval obtain date</label>
    <type>Date</type>
</CustomField>