force-app/main/default/objects/Case/fields/Pre_approval_obtained__c.field-meta.xml
<CustomField>
    <fullName>Pre_approval_obtained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-approval obtained</label>
    <type>Checkbox</type>
</CustomField>