force-app/main/default/objects/Case/fields/Pre_approval_submitted__c.field-meta.xml
<CustomField>
    <fullName>Pre_approval_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-approval submitted</label>
    <type>Checkbox</type>
</CustomField>