force-app/main/default/objects/Case/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <label>Previous_Status__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>