force-app/main/default/objects/Case/fields/Problem_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Problem_Code_Description__c</fullName>
    <label>Problem Code Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>