force-app/main/default/objects/Case/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RAY22</fullName>
            </value>
            <value>
                <fullName>RAY44</fullName>
            </value>
            <value>
                <fullName>RAY66</fullName>
            </value>
            <value>
                <fullName>RAZR 2</fullName>
            </value>
            <value>
                <fullName>RAZR M</fullName>
            </value>
            <value>
                <fullName>RAZRx</fullName>
            </value>
            <value>
                <fullName>SPYDRx</fullName>
            </value>
            <value>
                <fullName>SPYDRx PLUS</fullName>
            </value>
            <value>
                <fullName>SPYDR 2x</fullName>
            </value>
            <value>
                <fullName>SPYDR 2x33</fullName>
            </value>
            <value>
                <fullName>SPYDR 2P</fullName>
            </value>
            <value>
                <fullName>SPYDR 2i</fullName>
            </value>
            <value>
                <fullName>SPYDR 2i33</fullName>
            </value>
            <value>
                <fullName>SPYDR 2i40</fullName>
            </value>
            <value>
                <fullName>SPYDR 2H</fullName>
            </value>
            <value>
                <fullName>VYPRx</fullName>
            </value>
            <value>
                <fullName>VYPRx PLUS</fullName>
            </value>
            <value>
                <fullName>VYPR 2x</fullName>
            </value>
            <value>
                <fullName>VYPR 2x2</fullName>
            </value>
            <value>
                <fullName>VYPR 2p</fullName>
            </value>
            <value>
                <fullName>VYPR 3p</fullName>
            </value>
            <value>
                <fullName>VYPR 3x</fullName>
            </value>
            <value>
                <fullName>VYPR 3x2</fullName>
            </value>
            <value>
                <fullName>Solunar</fullName>
            </value>
            <value>
                <fullName>Whisper</fullName>
            </value>
            <value>
                <fullName>HRVYST</fullName>
            </value>
            <value>
                <fullName>SHYFT</fullName>
            </value>
            <value>
                <fullName>Multiple Products</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>RAZR 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>