force-app/main/default/objects/Case/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPYDR</fullName>
            </value>
            <value>
                <fullName>VYPR</fullName>
            </value>
            <value>
                <fullName>Razr</fullName>
            </value>
            <value>
                <fullName>Ray</fullName>
            </value>
            <value>
                <fullName>VYNE</fullName>
            </value>
            <value>
                <fullName>RAPTR</fullName>
            </value>
            <value>
                <fullName>Controllers</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>