force-app/main/default/objects/Case/fields/Project_Fixture_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Project_Fixture_Quantity__c</fullName>
    <label>Project Fixture Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>less than 100</fullName>
            </value>
            <value>
                <fullName>100-500</fullName>
            </value>
            <value>
                <fullName>500-1000</fullName>
            </value>
            <value>
                <fullName>more than 1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>