force-app/main/default/objects/Case/fields/Promote_to_Order_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Promote_to_Order_Due_Date__c</fullName>
    <label>Promote to Order Due Date</label>
    <type>Date</type>
</CustomField>