force-app/main/default/objects/Case/fields/Promote_to_Order_Owner__c.field-meta.xml
<CustomField>
    <fullName>Promote_to_Order_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promote to Order Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesBV06</relationshipName>
    <type>Lookup</type>
</CustomField>