force-app/main/default/objects/Case/fields/Promoted_to_Order__c.field-meta.xml
<CustomField>
    <fullName>Promoted_to_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promoted to Order</label>
    <type>Checkbox</type>
</CustomField>