force-app/main/default/objects/Case/fields/QN__c.field-meta.xml
<CustomField>
    <fullName>QN__c</fullName>
    <label>QN #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>