force-app/main/default/objects/Case/fields/Quantity_of_Design_Scenarios__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_Design_Scenarios__c</fullName>
    <label>Quantity of Design Scenarios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>