force-app/main/default/objects/Case/fields/Quantity_of_fixtures__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_fixtures__c</fullName>
    <label>Quantity of fixtures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>