force-app/main/default/objects/Case/fields/Quote_entered_in_SF__c.field-meta.xml
<CustomField>
    <fullName>Quote_entered_in_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote entered in SF</label>
    <type>Checkbox</type>
</CustomField>