force-app/main/default/objects/Case/fields/Quote_entered_in_SF_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_entered_in_SF_Completed_Date__c</fullName>
    <formula>Opportunity__r.SyncedQuote.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote entered in SF Completed Date</label>
    <type>DateTime</type>
</CustomField>