force-app/main/default/objects/Case/fields/Quote_entered_in_SF_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_entered_in_SF_Due_Date__c</fullName>
    <label>Quote entered in SF Due Date</label>
    <type>Date</type>
</CustomField>