force-app/main/default/objects/Case/fields/Quote_entered_in_SF_Owner__c.field-meta.xml
<CustomField>
    <fullName>Quote_entered_in_SF_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote entered in SF Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesBUQL</relationshipName>
    <type>Lookup</type>
</CustomField>