force-app/main/default/objects/Case/fields/Quote_Value__c.field-meta.xml
<CustomField>
    <fullName>Quote_Value__c</fullName>
    <description>Amount value of related Opportunity</description>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>