force-app/main/default/objects/Case/fields/RARF_Approved__c.field-meta.xml
<CustomField>
    <fullName>RARF_Approved__c</fullName>
    <label>RARF Approved</label>
    <type>DateTime</type>
</CustomField>