force-app/main/default/objects/Case/fields/RARF_Case_Completed__c.field-meta.xml
<CustomField>
    <fullName>RARF_Case_Completed__c</fullName>
    <formula>IF(AND(TEXT(Status)= &apos;Complete&apos;,RecordType.Name = &apos;RARF&apos;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RARF Case Completed</label>
    <type>Checkbox</type>
</CustomField>