force-app/main/default/objects/Case/fields/RARF_Case_Submitted__c.field-meta.xml
<CustomField>
    <fullName>RARF_Case_Submitted__c</fullName>
    <formula>IF(Owner:Queue.Name = &quot;RARF Queue&quot;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RARF Case Submitted</label>
    <type>Checkbox</type>
</CustomField>