force-app/main/default/objects/Case/fields/Rebaid__c.field-meta.xml
<CustomField>
    <fullName>Rebaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebate Paid to Customer</label>
    <type>Checkbox</type>
</CustomField>