force-app/main/default/objects/Case/fields/Rebate_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Administrator__c</fullName>
    <label>Rebate Administrator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fluence</fullName>
            </value>
            <value>
                <fullName>Network Partner</fullName>
            </value>
            <value>
                <fullName>ESCO</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>