force-app/main/default/objects/Case/fields/Rebate_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Initiative__c</fullName>
    <label>Rebate Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Ameren 2023</fullName>
            </value>
            <value>
                <fullName>XCEL 2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>