force-app/main/default/objects/Case/fields/Rebate_Partner__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Partner__c</fullName>
    <formula>TEXT(Opportunity__r.Rebate_Partner__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rebate Partner</label>
    <type>Text</type>
</CustomField>