force-app/main/default/objects/Case/fields/Rebate_Service_Assistance_Type__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Service_Assistance_Type__c</fullName>
    <label>Rebate Service Assistance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposal Letter</fullName>
            </value>
            <value>
                <fullName>Formal Utility Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>