force-app/main/default/objects/Case/fields/Rebate_Services_Needed__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Services_Needed__c</fullName>
    <label>Rebate Services Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rebate Proposal Letter</fullName>
            </value>
            <value>
                <fullName>Rebate Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>