force-app/main/default/objects/Case/fields/Replacement_Order__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Order__c</fullName>
    <label>Replacement Order #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>