force-app/main/default/objects/Case/fields/Replacement_Order_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Order_Ship_Date__c</fullName>
    <label>Replacement Order Ship Date</label>
    <type>Date</type>
</CustomField>