force-app/main/default/objects/Case/fields/Requested_Design_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Design_Completion_Date__c</fullName>
    <label>Requested Design Completion Date</label>
    <type>Date</type>
</CustomField>