force-app/main/default/objects/Case/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <formula>Opportunity__r.Reseller__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller</label>
    <type>Text</type>
</CustomField>