force-app/main/default/objects/Case/fields/Return_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Return_Tracking__c</fullName>
    <label>Return Tracking #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>