force-app/main/default/objects/Case/fields/RMA_Shipping_Tracking__c.field-meta.xml
<CustomField>
    <fullName>RMA_Shipping_Tracking__c</fullName>
    <label>RMA Shipping Tracking #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>