force-app/main/default/objects/Case/fields/RMA_Status__c.field-meta.xml
<CustomField>
    <fullName>RMA_Status__c</fullName>
    <label>RMA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opened</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Stopped</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>