force-app/main/default/objects/Case/fields/Root_Cause_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Resolution__c</fullName>
    <label>Root Cause / Resolution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>