force-app/main/default/objects/Case/fields/Service_Provided__c.field-meta.xml
<CustomField>
    <fullName>Service_Provided__c</fullName>
    <label>Service Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Creation</fullName>
            </value>
            <value>
                <fullName>Order Modification</fullName>
            </value>
            <value>
                <fullName>RMA Creation</fullName>
            </value>
            <value>
                <fullName>RMA Modification</fullName>
            </value>
            <value>
                <fullName>BML Contact</fullName>
            </value>
            <value>
                <fullName>Other/NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>