force-app/main/default/objects/Case/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Customer Service</fullName>
            </value>
            <value>
                <fullName>Horticulture Support</fullName>
            </value>
            <value>
                <fullName>Tech Support</fullName>
            </value>
            <value>
                <fullName>Utility Rebates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>