force-app/main/default/objects/Case/fields/Ship_Error_Detail__c.field-meta.xml
<CustomField>
    <fullName>Ship_Error_Detail__c</fullName>
    <label>Ship Error Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Ship_Error__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipped incorrect part</fullName>
            </value>
            <value>
                <fullName>Shipped short</fullName>
            </value>
            <value>
                <fullName>Shipped too many</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>