force-app/main/default/objects/Case/fields/Ship_Via_Description__c.field-meta.xml
<CustomField>
    <fullName>Ship_Via_Description__c</fullName>
    <label>Ship Via Description</label>
    <type>TextArea</type>
</CustomField>