force-app/main/default/objects/Case/fields/Site_Specific_Testing_Required_for_FA__c.field-meta.xml
<CustomField>
    <fullName>Site_Specific_Testing_Required_for_FA__c</fullName>
    <label>Site Specific Testing Required for FA</label>
    <type>TextArea</type>
</CustomField>