force-app/main/default/objects/Case/fields/SPA_Form_Approval_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>SPA_Form_Approval_Due_Date__c</fullName>
    <label>SPA Form Approval Due Date</label>
    <type>Date</type>
</CustomField>