force-app/main/default/objects/Case/fields/SPA_Form_Approved__c.field-meta.xml
<CustomField>
    <fullName>SPA_Form_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPA Form Approved</label>
    <type>Checkbox</type>
</CustomField>