force-app/main/default/objects/Case/fields/SPA_Form_Approved_Owner__c.field-meta.xml
<CustomField>
    <fullName>SPA_Form_Approved_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPA Form Approved Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesBUt0</relationshipName>
    <type>Lookup</type>
</CustomField>