force-app/main/default/objects/Case/fields/Specific_objectives_of_grower__c.field-meta.xml
<CustomField>
    <fullName>Specific_objectives_of_grower__c</fullName>
    <inlineHelpText>Understand what are the specific objectives the grower would like to achieve at the end of the trial</inlineHelpText>
    <label>Specific objectives of grower</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>