force-app/main/default/objects/Case/fields/Spectrum__c.field-meta.xml
<CustomField>
    <fullName>Spectrum__c</fullName>
    <label>Spectrum</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>B4F</fullName>
            </value>
            <value>
                <fullName>B6F</fullName>
            </value>
            <value>
                <fullName>B8F</fullName>
            </value>
            <value>
                <fullName>B9F</fullName>
            </value>
            <value>
                <fullName>BP6</fullName>
            </value>
            <value>
                <fullName>BP8</fullName>
            </value>
            <value>
                <fullName>BP9</fullName>
            </value>
            <value>
                <fullName>BW3</fullName>
            </value>
            <value>
                <fullName>BW4</fullName>
            </value>
            <value>
                <fullName>DR5</fullName>
            </value>
            <value>
                <fullName>DR9</fullName>
            </value>
            <value>
                <fullName>HP9</fullName>
            </value>
            <value>
                <fullName>HR9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>