force-app/main/default/objects/Case/fields/SPM__c.field-meta.xml
<CustomField>
    <fullName>SPM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPM</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>SPM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>