force-app/main/default/objects/Case/fields/Submit_case__c.field-meta.xml
<CustomField>
    <fullName>Submit_case__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>First click on &quot;Edit&quot; button, and then check this field to submit LDRF.</inlineHelpText>
    <label>Submit LDRF</label>
    <type>Checkbox</type>
</CustomField>